# TimeMachine

./: .gitignore  CMakeLists.txt  README  README.md  driver.cpp  insert.cpp  insert.h  main.cpp  person.h  player.cpp  player.ui  playercontroller.cpp  playercontroller.h  select.cpp  select.h  streamcontroller.h  timebar.cpp  timebarconstants.h  timestamp.h
ParserTS/: ParserTS.pro  main.cpp
Slicer/: Slicer.pro  clean_server.cpp  clean_server.h  clean_slicer.cpp  clean_slicer.h  client.cpp  client.h  main.cpp  main_old.cpp  parser.cpp  parser.h  pipe_server.cpp  pipe_server.h  slicer.cpp  slicer.h  socket_server.cpp  socket_server.h
Test_MyBar/: .gitignore  CMakeLists.txt  characterwidget.cpp  characterwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  player.cpp  player.h  player.ui  playercontroller.cpp  playercontroller.h  playerdefinitions.h  streamcontroller.cpp  timebar.cpp  timebar.h  timebarconstants.h
TimeMachine/: .gitignore  CMakeLists.txt  clean_server.cpp  clean_server.h  clean_slicer.cpp  clean_slicer.h  file.h  insert.cpp  insert.h  main.cpp  main_old.cpp  parser.cpp  parser.h  player.cpp  player.h  player.ui  playercontroller.cpp  playercontroller.cpp.autosave  playercontroller.h  playercontroller.h.autosave  playerdefinitions.h  playerresources.qrc  select.cpp  select.h  slicer.cpp  slicer.h  streamcontroller.cpp  streamcontroller.h  timebar.cpp  timebar.h  timebarconstants.h  timestamp.h
TimeMachine/cmake/Modules/: FindODB.cmake
TimeMachine/odb/: traits.hxx
TimeMachine_database/: CMakeLists.txt  database.h  driver.cpp  driver.cpp.autosave  file.h  insert.cpp  insert.h  path.h  query.cpp  select.cpp  select.h  source.h  timestamp.h
TimeMachine_database/cmake/Modules/: FindODB.cmake
cmake/Modules/: FindLIBVLC.cmake
